--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<version>2.3.3.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
